# vocechat-server-rust

./: .env  .gitignore  .rustfmt.toml  Cargo.toml  README.md  license
.github/workflows/: book.yml  ci.yml  release.yml
book/: README.md
book/en-us/: book.toml
book/en-us/src/: SUMMARY.md  backup-migration.md  godaddy-ca.md  google-fcm-notification.md  iframe-embed.md  install-by-docker-nginx.md  install-by-docker.md  install-by-shell.md  login-github.md  login-google.md  login-metamask.md  login-webid.md  modify-admin-password.md  nginx-by-docker.md  run-on-vps.md  server-access-control.md  setting-agora.md  setting-firebase-notification.md  setting-smtp.md  smtp-gmail.md  ssl-have-ca.md  ssl-no-ca.md  ssl.md  what-is-vocechat.md
cert/: ca.crt  ca.key  create.sh
config/: config-tls.toml  config.toml  fcm_credentials.json
config/templates/: login_by_email.html  register_by_email.html
crates/agora-token/: Cargo.toml
crates/agora-token/src/: lib.rs
crates/fcm/: Cargo.toml
crates/fcm/src/: client.rs  credentials.rs  jwt.rs  lib.rs
crates/github-oauth/: Cargo.toml
crates/license/: Cargo.toml
crates/license/src/: lib.rs
crates/magic-link/: Cargo.toml
crates/magic-link/src/: lib.rs
crates/msgdb/: Cargo.toml
crates/msgdb/benches/: db.rs
crates/msgdb/src/: db.rs  error.rs  lib.rs  messages.rs  sequence.rs
crates/open-graph/: Cargo.toml  README.md
crates/open-graph/src/: audio.rs  error.rs  fetcher.rs  image.rs  lib.rs  object.rs  video.rs
crates/token/: Cargo.toml
crates/token/src/: error.rs  lib.rs
crates/vc-license/: Cargo.toml
crates/vc-license/src/: lib.rs
migrations/: 20211225030728_create.sql  20211231103316_user_log.sql  20220110103458_operation_log.sql  20220120030840_mute.sql  20220216110023_metamask_auth.sql  20220222011624_read_index.sql  20220224101141_burn_after_reading.sql  20220302015013_config.sql  20220322022325_user_status.sql  20220409084106_group_avatar.sql  20220412042859_third_party_users.sql  20220419112824_favorite.sql  20220424023928_pin_message.sql  20220524222000_github_auth.sql  20220614000000_magic_link.sql  20220825014833_guest_user.sql  20221204062009_pinned_message_idx.sql  20221211080856_webhook.sql  20221214110231_is_bot.sql  20221217142927_bot_keys.sql
src/: api_key.rs  config.rs  create_user.rs  license.rs  main.rs  middleware.rs  self_signed.rs  server.rs  state.rs  test_harness.rs
src/api/: admin_agora.rs  admin_fcm.rs  admin_github_auth.rs  admin_google_auth.rs  admin_login.rs  admin_smtp.rs  admin_system.rs  admin_user.rs  archive.rs  bot.rs  datetime.rs  favorite.rs  group.rs  langid.rs  license.rs  message.rs  message_api.rs  mod.rs  resource.rs  tags.rs  token.rs  user.rs  user_log_action.rs
