[package]
name = "rc-fcm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
base64 = "0.13.0"
chrono = "0.4.19"
reqwest = { version = "0.11.8", default-features = false, features = ["rustls-tls", "json"] }
rustls = "0.20.2"
rustls-pemfile = "0.3.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
