[package]
name = "open-graph"
version = "0.1.0"
edition = "2021"
include = ["**/*.rs", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["macros"] }
html5ever = "0.22.5"
reqwest = { version = "0.11.10", features = [
    "tokio-rustls",
], default-features = false }
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
poem-openapi = { version = "2.0.23", optional = true }
http = "0.2.6"
url = "2.2.2"
flate2 = "1.0"
regex = "1.5.4"
async-recursion = "1.0.0"

[features]
default = []
poem_openapi = ["poem-openapi"]
