[package]
name = "vc-license"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono={version="0.4.19"}
uuid = {version="1.1.2", features=["v4"]}
rsa = {version="0.6.1", features=["pem"]}
pkcs1="0.3.3"
rand="0.8.5"
sha2="0.9.9"
digest="0.8.1"
bs58="0.4.0"
hex="0.4.3"
anyhow = "1.0.52"